--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=/" />
+    <meta charset="utf-8" />
+    <script>
+      sessionStorage.redirect = location.pathname;
+      window.location.replace("/");
+    </script>
   </head>
   <body></body>
 </html>
